objects/gcga__Dynamic_Field__mdt.object
<CustomObject>
    <description>CGAND-230: Used to retrieve fields dynamically and allow overriding of standard packaged fields</description>
    <fields>
        <fullName>gcga__Dynamic_Field_API_Name__c</fullName>
        <description>CGAND-230: Specify the field to override the Standard Field with</description>
        <inlineHelpText>Specify the field to override the Standard Field with</inlineHelpText>
        <label>Dynamic Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gcga__Object__c</fullName>
        <description>CGAND-230: Specify the object on which the fields exist</description>
        <inlineHelpText>Specify the object on which the fields exist</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gcga__Standard_Field_API_Name__c</fullName>
        <description>CGAND-230: Specify the field to override</description>
        <inlineHelpText>Specify the field to override</inlineHelpText>
        <label>Standard Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Dynamic Field</label>
    <pluralLabel>Dynamic Fields</pluralLabel>
</CustomObject>